--- a/recipes/Batido_platano.html
+++ b/recipes/Batido_platano.html
@@ -4,11 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Batido de Fresa y Plátano</title>
+    <link rel="stylesheet" href="Batido.css">
 </head>
 
 <body>
+    <div class="texto">  
     <h1>Batido de Fresa y Plátano</h1>
-    <img src="https://imag.bonviveur.com/batido-de-fresa-y-platano.jpg">
+    <div class="imagen"> 
+    <img src="Imagenes/batido-de-fresa-y-platano.jpg">
+    </div>
     <h2>Descripción</h2>
     <p>El <strong>batido de fresa y plátano</strong> es una bebida refrescante y saludable, perfecta para el desayuno o la merienda. Se prepara con fresas frescas, plátano maduro y leche o yogur, lo que le da una textura cremosa y un sabor dulce y natural.</p>
     
@@ -31,7 +35,8 @@
         <li>Sirve en un vaso y disfruta inmediatamente.</li>
     </ol>
 
-    <a href="../index.html">Volver a la página de inicio</a>
+    <a href="../index.html" class="boton">Volver a la página de inicio</a>
+</div>
 </body>
 
 </html>
