--- a/recipes/Hotcakes_Avena.html
+++ b/recipes/Hotcakes_Avena.html
@@ -4,11 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Hotcakes de Avena</title>
+    <link rel="stylesheet" href="cakes.css">
 </head>
 
 <body>
+    <div class="texto"> 
     <h1>Hotcakes de Avena</h1>
-    <img src="https://www.cocinadelirante.com/800x600/filters:format(webp):quality(75)/sites/default/files/images/2018/10/hot-cakes-de-avena-saludables.jpeg">
+    <div class="imagen">
+    <img src="Imagenes/receta_hot_cakes_avena_platano.jpg">
+    </div>
+
     <h2>Descripción</h2>
     <p>Los <strong>hotcakes de avena</strong> son una opción deliciosa y saludable para el desayuno. Se preparan con harina de avena, huevo y leche, lo que les da una textura esponjosa y un sabor ligeramente dulce. Son una excelente fuente de fibra y energía.</p>
     
@@ -34,7 +39,9 @@
         <li>Sirve caliente con miel y frutas frescas.</li>
     </ol>
 
-    <a href="../index.html">Volver a la página de inicio</a>
+    <a href="../index.html" class="boton">Volver a la página de inicio</a>
+
+</div>
 </body>
 
 </html>
