--- a/recipes/crepes_platano.html
+++ b/recipes/crepes_platano.html
@@ -2,14 +2,18 @@
 <html lang="es">
 
 <head>
-    <meta charset="UTF-8" <title>Recetas</title>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="crepes.css">
 </head>
 
 <body>
-    <h1>Cepres de Platano</h1>
-    <img
-        src="https://www.startpage.com/av/proxy-image?piurl=https%3A%2F%2Ftse3.mm.bing.net%2Fth%3Fid%3DOIP.sa3MM1b3-dCE387Kn6R6jgHaEn%26pid%3DApi&sp=1739382151T442570644649f75e734093ab337001854758c9135a238d969542eda9fa9cb99b">
-
+    <div class="texto"> 
+    <h1>Cepres de Platano.</h1>
+    
+    <div class="imagen"> 
+    <img src="Imagenes/Crepes.jpeg">
+    </div>
+    
     <h2>Descripcion </h2>
     <p>Los <strong>crêpes de plátano</strong> son una deliciosa y versátil opción para el desayuno o la merienda. Se
         preparan con una masa ligera a base de harina, leche, huevos y un toque de vainilla, que se cocina en una sartén
@@ -57,7 +61,8 @@
         <li>Enrolle un crepé alrededor de cada mitad de plátano y colóquelo en un plato para servir. Salsa de cuchara
             sobre crepes. Cubra con crema batida y una pizca de canela.</li>
     </ol>
-    <a href="../index.html">Volver a la página de inicio</a>
+    <a href="../index.html" class="boton">Volver a la página de inicio</a>
+</div>
 
 </body>
 
